* Fix bug for Configuration Change(Device rotation) * Optimize UI in PORTRAIT Configuration * Change some icon in keyboard toolbar

--- a/app/src/main/res/layout/fragment_bp.xml
+++ b/app/src/main/res/layout/fragment_bp.xml
@@ -37,8 +37,9 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:baselineAligned="false">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -53,7 +54,7 @@
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
                             android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 0)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP0 : kbviewmodel.observeBP8}"
+                            android:text="@{kbviewmodel.observeBP0}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -69,7 +70,8 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP2 : kbviewmodel.observeBP10}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 2)}"
+                            android:text="@{kbviewmodel.observeBP2}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -85,7 +87,8 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP4 : kbviewmodel.observeBP12}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 4)}"
+                            android:text="@{kbviewmodel.observeBP4}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -101,7 +104,76 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP6 : kbviewmodel.observeBP14}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 6)}"
+                            android:text="@{kbviewmodel.observeBP6}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText9"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 8)}"
+                            android:text="@{kbviewmodel.observeBP8}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText11"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 10)}"
+                            android:text="@{kbviewmodel.observeBP10}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText13"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 12)}"
+                            android:text="@{kbviewmodel.observeBP12}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText15"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 14)}"
+                            android:text="@{kbviewmodel.observeBP14}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -124,7 +196,8 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP1 : kbviewmodel.observeBP9}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 1)}"
+                            android:text="@{kbviewmodel.observeBP1}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -140,7 +213,8 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP3 : kbviewmodel.observeBP11}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 3)}"
+                            android:text="@{kbviewmodel.observeBP3}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -156,7 +230,8 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP5 : kbviewmodel.observeBP13}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 5)}"
+                            android:text="@{kbviewmodel.observeBP5}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -172,7 +247,76 @@
                             android:layout_height="125dp"
                             android:gravity="center"
                             android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
-                            android:text="@{kbviewmodel.bpPage==0 ? kbviewmodel.observeBP7 : kbviewmodel.observeBP15}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 7)}"
+                            android:text="@{kbviewmodel.observeBP7}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText10"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 9)}"
+                            android:text="@{kbviewmodel.observeBP9}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText12"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 11)}"
+                            android:text="@{kbviewmodel.observeBP11}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText14"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 13)}"
+                            android:text="@{kbviewmodel.observeBP13}"
+                            android:textAllCaps="false"
+                            android:textColor="@{kbviewmodel.observeKBFontColor}"
+                            android:textSize="@{kbservice.fontSize}"
+                            app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                            app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                            app:customTheme_view="@{0}"
+                            app:fontBold="@{kbviewmodel.mode}"
+                            app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
+
+                        <Button
+                            android:id="@+id/frag_autoText16"
+                            android:layout_width="match_parent"
+                            android:layout_height="125dp"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> kbservice.inputBPStrings(v)}"
+                            android:onLongClick="@{(v) -> kbservice.jumpToBp(v, 15)}"
+                            android:text="@{kbviewmodel.observeBP15}"
                             android:textAllCaps="false"
                             android:textColor="@{kbviewmodel.observeKBFontColor}"
                             android:textSize="@{kbservice.fontSize}"
@@ -190,23 +334,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".4"
                 android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/frag_next"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:onClick="@{() -> kbviewmodel.getNextBpPage()}"
-                    android:text="다음"
-                    android:textAllCaps="false"
-                    android:textColor="@{kbviewmodel.observeKBFontColor}"
-                    android:textSize="12sp"
-                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
-                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
-                    app:customTheme_view="@{2}"
-                    app:fontBold="@{kbviewmodel.mode}"
-                    app:customFontStyle="@{kbviewmodel.observeKBFontType}" />
 
                 <ImageButton
                     android:id="@+id/frag_delete"
