--- a/app/src/main/res/xml/xml.xml
+++ b/app/src/main/res/xml/xml.xml
@@ -2,5 +2,6 @@
 <input-method xmlns:android="http://schemas.android.com/apk/res/android">
     <subtype
         android:label="FittingKeyboard"
-        android:imeSubtypeMode="keyboard" />
+        android:imeSubtypeMode="keyboard"
+        android:imeSubtypeExtraValue="mFittingKeyboard"/>
 </input-method>
