--- a/app/src/main/res/layout/fragment_bp.xml
+++ b/app/src/main/res/layout/fragment_bp.xml
@@ -373,7 +373,7 @@
                     android:layout_weight="1"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbservice.enterFunction()}"
+                    android:onClick="@{() -> kbservice.inputEnter()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_enter_black"
                     app:colorFilter="@{kbviewmodel.observeKBFunctionFontColor}"
