--- a/app/src/main/res/layout/fragment_keyboard_number.xml
+++ b/app/src/main/res/layout/fragment_keyboard_number.xml
@@ -225,7 +225,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{(v) -> kbservice.enterFunction()}"
+                    android:onClick="@{(v) -> kbservice.inputEnter()}"
                     android:onLongClick="@{() -> kbservice.addFunction(kbviewmodel.observeKBEnterKeyHolding)}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_enter_black"
