--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="keyInset">3dp</dimen>
     <dimen name="insetKey_increased">1.25dp</dimen>
     <dimen name="theme02stroke">1.5dp</dimen>
+    <dimen name="pageOffset">30dp</dimen>
+    <dimen name="pageMargin">30dp</dimen>
+    <dimen name="emoji_bar_size">30dp</dimen>
 </resources>
