--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,6 @@
         <item name="android:background">#007BFF</item>
         <item name="android:textColorSecondary">@color/white</item>
     </style>
+
+    <style name="ThemeCustom.TabLayout" parent="Theme.AppCompat.DayNight"/>
 </resources>
